--- a/css/agro_tehnika.css
+++ b/css/agro_tehnika.css
@@ -79,3 +79,35 @@ section{
 .contener{
     margin: 60px;
 }
+.list_two_colomn{
+    display: flex;
+    list-style: none;
+}
+.list_two_colomn ul{
+    list-style-type: disc;
+}
+.list_two_colomn a{
+    color: #2F7B80;
+}
+.main_nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    
+}
+ul.main_nav li {
+    list-style-type: none; 
+    border: 2px solid #2F7B80;
+    width: 257px;
+    height: 63px;
+    border-radius: 5px;
+    }
+.main_nav a{
+    text-decoration: none;
+    font-size: var(--base-line-height);
+    color: var(--text-color);
+}
+.advantages{
+    display: flex;
+}
