--- a/css/agro_tehnika.css
+++ b/css/agro_tehnika.css
@@ -6,7 +6,7 @@ body {
     --separator-color: #828282;
     --base-font-size: 16px;
     --base-line-height: 20px;
-    --p-font-size:48px;
+    --p-font-size: 48px;
 }
 
 html,
@@ -16,7 +16,8 @@ body {
     background: var(--bg-color);
 }
 
-.header-log, nav ul{
+.header-log,
+nav ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,6 +25,7 @@ body {
     list-style: none;
     margin: 0;
 }
+
 /**
 nav ul{
     display: flex;
@@ -34,80 +36,168 @@ nav ul{
     margin: 0; 
 }
 **/
-.header-log button{
+.header-log button {
     background-color: #E10B20;
     border-radius: 5px;
     width: 259px;
     height: 65px;
 }
-.header-log a, nav a{
+
+.header-log a,
+nav a {
     text-decoration: none;
 }
 
-h1, h2{
+h1,
+h2 {
     font-size: var(--p-font-size);
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
-nav {
+
+nav li {
+    margin-right: 22px;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
     background-color: var(--bg-secondary-color);
     font-size: var(--base-line-height);
     color: var(--bg-color);
     width: auto;
-    display: flex;
-    justify-content: center;
     height: 65px;
 }
+
 nav a {
     color: var(--bg-color);
 }
-.fon-img {
+
+.img_background {
+    width: 100%;
     background-image: url(../img/home-img/angar-svinarnik-1.jpg);
     background-size: cover;
+    background-position: center;
+    color: var(--bg-color);
 }
-.contener-img {
-    width: 100%;
-}
+
 .header-log img:first-child {
-    float:left;
-  }
-section{
+    float: left;
+}
+
+section {
     display: flex;
     justify-content: center;
 }
-.border_telephone{
+
+.border_telephone {
     border: #FFFFFF;
 }
-.contener{
-    margin: 60px;
+
+.contener {
+    margin-left: 60px;
+    margin-right: 60px;
 }
-.list_two_colomn{
+
+.list_two_colomn {
     display: flex;
     list-style: none;
 }
-.list_two_colomn ul{
+
+.list_two_colomn ul {
     list-style-type: disc;
+    list-style: none;
+
 }
-.list_two_colomn a{
+
+.list_two_colomn a {
     color: #2F7B80;
 }
-.main_nav{
+
+ul.list_colomn_left {
+    float: left;
+    padding: 0;
+}
+
+.colomn_gorizont {
+    display: inline-flex;
+    justify-content: center;
+
+}
+
+.main_nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 10px;
-    
+
+
 }
+
 ul.main_nav li {
-    list-style-type: none; 
+    list-style-type: none;
     border: 2px solid #2F7B80;
     width: 257px;
     height: 63px;
     border-radius: 5px;
-    }
-.main_nav a{
+}
+
+.main_nav a {
     text-decoration: none;
     font-size: var(--base-line-height);
     color: var(--text-color);
 }
-.advantages{
+
+.advantages {
+    display: flex;
+}
+
+.img-desktop>img {
+    width: 100%;
+    height: auto;
+    float: left;
+}
+
+.img-desktop {
+    padding-right: 30px;
+}
+
+/** кнопки навигации**/
+.button_controls {
+    display: flex;
+}
+
+.button_controls>button {
+    flex: 1 1;
+    border: 2px solid #2F7B80;
+    border-radius: 5px;
+    padding: 10px;
+    background: transparent;
+    font-size: var(--base-line-height);
+    margin: 5px;
+    width: 257px;
+    height: auto;
+}
+
+.button_controls button:first-child {
+    margin-left: 0;
+}
+
+.button_controls button:last-child {
+    margin-right: 0;
+}
+.button_main_color{
+    background: var(--bg-secondary-color);
+}
+.button_controls > button.button_main_color {
+    font-weight: bold;
+    background:var(--bg-secondary-color);
+    color: var(--bg-color);
+}
+.tabor_class{
+    display: none;
+}
+
+.tabor_class.visible{
     display: flex;
 }
